--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
-icewm -- authors file.  2023-05-18
+icewm -- authors file.  2023-06-04
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
+Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
 Author: Jan Papež <honyczek@centrum.cz>
 Author: Hugo Carvalho <hugokarvalho@hotmail.com>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
@@ -28,7 +30,6 @@ Author: Antonio Simón <antonio@trans-mission.com>
 Author: Grace Yu <grace.yu@excel-gits.com>
 Author: Davide Aiello <davide.aiello@novilingulists.com>
 Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
-Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
 Author: Baurzhan Muftakhidinov <baurthefirst@gmail.com>
 Author: Vincent Legoll <vincent.legoll@gmail.com>
 Author: Naveen <172697+naveensrinivasan@users.noreply.github.com>
